@@ -1,6 +1,6 @@
 # Script that synchronizes the local library dependencies
 #
-# Version: 20160912
+# Version: 20161106
 
 $GitUrlPrefix = "https://github.com/libyal"
 $LocalLibs = "" -split " "
@@ -11,17 +11,17 @@ foreach (${LocalLib} in ${LocalLibs})
 	# therefore 2>&1 is added and the output is stored in a variable.
 	$Output = Invoke-Expression -Command "git clone ${GitUrlPrefix}/${LocalLib}.git ${LocalLib}-${pid} 2>&1"
 
-	if (Test-Path ${LocalLib}-${pid})
+	If (Test-Path ${LocalLib}-${pid})
 	{
 		$LocalLibVersion = Get-Content -Path ${LocalLib}-${pid}\configure.ac | select -skip 4 -first 1 | % { $_ -Replace " \[","" } | % { $_ -Replace "\],","" }
 
-		if (Test-Path ${LocalLib})
+		If (Test-Path ${LocalLib})
 		{
 			Remove-Item -Path ${LocalLib} -Force -Recurse
 		}
 		New-Item -ItemType directory -Path ${LocalLib} -Force | Out-Null
 
-		if (Test-Path ${LocalLib})
+		If (Test-Path ${LocalLib})
 		{
 			Copy-Item -Path ${LocalLib}-${pid}\${LocalLib}\*.[chly] -Destination ${LocalLib}\
 			Get-Content -Path ${LocalLib}-${pid}\${LocalLib}\${LocalLib}_definitions.h.in | % { $_ -Replace "@VERSION@",${LocalLibVersion} } > ${LocalLib}\${LocalLib}_definitions.h
