@@ -10,6 +10,7 @@ Notes:
 
 20161106
 * moved libcstring macros to common
+* worked on tests
 
 20160823
 * worked on tests
